# AXA_citibike_challenge

./: .gitignore  CodingChallenge_accident_model.ipynb  CodingChallenge_tripdata_model.ipynb  README.md  all_vehicle_types.csv  cycling_collision_heatmap.html  most_popular_start_stations.html  pyproject.toml  xgb_collision_prob_model.json
citibike_utils/: __init__.py
citibike_utils/.ipynb_checkpoints/: __init__-checkpoint.py
data/.ipynb_checkpoints/: open-meteo-40.74N74.04W51m(1)-checkpoint.csv  open-meteo-40.74N74.04W51m(2)-checkpoint.csv
