[project]
name = "axa-citibike-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "basemap",
    "boto3>=1.35.71",
    "cartopy>=0.24.1",
    "folium>=0.18.0",
    "geopandas>=1.0.1",
    "holidays>=0.61",
    "imblearn>=0.0",
    "matplotlib>=3.9.3",
    "pandas>=2.2.3",
    "polars>=1.16.0",
    "pyarrow>=18.1.0",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "xgboost>=2.1.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "tqdm>=4.67.1",
]
